--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7127d69a",
+   "execution_count": 61,
+   "id": "61ecf19f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder,OrdinalEncoder\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline, make_pipeline\n",
@@ -34,35 +34,264 @@
     "import threading\n",
     "from pathlib import Path\n",
     "from joblib import dump, load\n",
-    "import re"
+    "import re\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "44ecbe06",
+   "execution_count": 70,
+   "id": "80ffbce0",
    "metadata": {},
    "outputs": [],
    "source": [
     "target = 'price'\n",
-    "categorical_columns = ['city','layout_type','property_type','furnish_type','locality','seller_type']\n",
+    "categorical_columns = ['city','layout_type','property_type','furnish_type','seller_type','locality']\n",
     "continuous_columns = ['bedroom','area','bathroom']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "96feba54",
+   "execution_count": 71,
+   "id": "38513d19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('./data/data.csv')"
+    "data = pd.read_csv('./data/data.csv')\n",
+    "#data[target] = np.log(data[target])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ad77de78",
+   "execution_count": 72,
+   "id": "8e3657aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>seller_type</th>\n",
+       "      <th>bedroom</th>\n",
+       "      <th>layout_type</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>locality</th>\n",
+       "      <th>price</th>\n",
+       "      <th>area</th>\n",
+       "      <th>furnish_type</th>\n",
+       "      <th>bathroom</th>\n",
+       "      <th>city</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>OWNER</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>BHK</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Bodakdev</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>1450.0</td>\n",
+       "      <td>Furnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OWNER</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>RK</td>\n",
+       "      <td>Studio Apartment</td>\n",
+       "      <td>CG Road</td>\n",
+       "      <td>7350.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>OWNER</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>BHK</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Jodhpur</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>1900.0</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OWNER</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>BHK</td>\n",
+       "      <td>Independent House</td>\n",
+       "      <td>Sanand</td>\n",
+       "      <td>13000.0</td>\n",
+       "      <td>1285.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OWNER</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>BHK</td>\n",
+       "      <td>Independent House</td>\n",
+       "      <td>Navrangpura</td>\n",
+       "      <td>18000.0</td>\n",
+       "      <td>1600.0</td>\n",
+       "      <td>Furnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98776</th>\n",
+       "      <td>OWNER</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>BHK</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Chinchwad</td>\n",
+       "      <td>13250.0</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98777</th>\n",
+       "      <td>OWNER</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>RK</td>\n",
+       "      <td>Studio Apartment</td>\n",
+       "      <td>Wadgaon Sheri</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98778</th>\n",
+       "      <td>OWNER</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>BHK</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Kothrud</td>\n",
+       "      <td>8500.0</td>\n",
+       "      <td>389.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98779</th>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>BHK</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Wakad</td>\n",
+       "      <td>16500.0</td>\n",
+       "      <td>670.0</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98780</th>\n",
+       "      <td>AGENT</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>BHK</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Alandi</td>\n",
+       "      <td>12000.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Pune</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>98781 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      seller_type  bedroom layout_type      property_type       locality  \\\n",
+       "0           OWNER      2.0         BHK          Apartment       Bodakdev   \n",
+       "1           OWNER      1.0          RK   Studio Apartment        CG Road   \n",
+       "2           OWNER      3.0         BHK          Apartment        Jodhpur   \n",
+       "3           OWNER      2.0         BHK  Independent House         Sanand   \n",
+       "4           OWNER      2.0         BHK  Independent House    Navrangpura   \n",
+       "...           ...      ...         ...                ...            ...   \n",
+       "98776       OWNER      1.0         BHK          Apartment      Chinchwad   \n",
+       "98777       OWNER      1.0          RK   Studio Apartment  Wadgaon Sheri   \n",
+       "98778       OWNER      1.0         BHK          Apartment        Kothrud   \n",
+       "98779       AGENT      1.0         BHK          Apartment          Wakad   \n",
+       "98780       AGENT      2.0         BHK          Apartment         Alandi   \n",
+       "\n",
+       "         price    area    furnish_type  bathroom       city  \n",
+       "0      20000.0  1450.0       Furnished       2.0  Ahmedabad  \n",
+       "1       7350.0   210.0  Semi-Furnished       1.0  Ahmedabad  \n",
+       "2      22000.0  1900.0     Unfurnished       3.0  Ahmedabad  \n",
+       "3      13000.0  1285.0  Semi-Furnished       2.0  Ahmedabad  \n",
+       "4      18000.0  1600.0       Furnished       2.0  Ahmedabad  \n",
+       "...        ...     ...             ...       ...        ...  \n",
+       "98776  13250.0   650.0  Semi-Furnished       1.0       Pune  \n",
+       "98777   7000.0   350.0     Unfurnished       1.0       Pune  \n",
+       "98778   8500.0   389.0  Semi-Furnished       1.0       Pune  \n",
+       "98779  16500.0   670.0  Semi-Furnished       2.0       Pune  \n",
+       "98780  12000.0   800.0     Unfurnished       2.0       Pune  \n",
+       "\n",
+       "[98781 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "92e6aba9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,27 +299,32 @@
     "    ('imputer', SimpleImputer(strategy='median')),\n",
     "    ('scaler', StandardScaler())])\n",
     "\n",
-    "categorical_transformer_target = Pipeline(steps=[\n",
-    "    ('encoder', ce.CatBoostEncoder())])"
+    "catboost_transformer = Pipeline(steps=[\n",
+    "    ('encoder', ce.CatBoostEncoder())])\n",
+    "\n",
+    "one_hot_transformer = Pipeline(steps=[\n",
+    "    ('encoder', OrdinalEncoder())])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2fc5424f",
+   "execution_count": 74,
+   "id": "2f887639",
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', numeric_transformer, continuous_columns),\n",
-    "        ('cat', categorical_transformer_target, categorical_columns)])"
+    "        ('cat1', catboost_transformer, categorical_columns[-1:]),\n",
+    "        ('cat2', one_hot_transformer, categorical_columns[0:-1])\n",
+    "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "219b0750",
+   "execution_count": 87,
+   "id": "0f56a0a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "698bda10",
+   "execution_count": 88,
+   "id": "00cc0433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +351,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "97378309",
+   "execution_count": 89,
+   "id": "bf16bd26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "bda0e23c",
+   "execution_count": 90,
+   "id": "8031c49a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,8 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "17ea35f9",
+   "execution_count": 91,
+   "id": "b83077fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8d3e00b5",
+   "execution_count": 92,
+   "id": "dc017052",
    "metadata": {},
    "outputs": [
     {
@@ -179,36 +413,36 @@
       "linearregression\n",
       "Training started\n",
       "Model linearregression\n",
-      "train duration 2.690599203109741 \n",
-      "r2:  0.4067735668570026\n",
+      "train duration 1.3933022022247314 \n",
+      "r2:  0.7185866218984773\n",
       " \n",
       "Model trained\n",
       "decisiontreeregressor\n",
       "Training started\n",
       "Model decisiontreeregressor\n",
-      "train duration 4.651044130325317 \n",
-      "r2:  0.3429276193333586\n",
+      "train duration 1.6883883476257324 \n",
+      "r2:  0.6534644921037569\n",
       " \n",
       "Model trained\n",
       "randomforestregressor\n",
       "Training started\n",
       "Model randomforestregressor\n",
-      "train duration 13.120703220367432 \n",
-      "r2:  0.6560176154570969\n",
+      "train duration 3.1575446128845215 \n",
+      "r2:  0.8052847471528121\n",
       " \n",
       "Model trained\n",
       "adaboostregressor\n",
       "Training started\n",
       "Model adaboostregressor\n",
-      "train duration 9.27309250831604 \n",
-      "r2:  0.3267355158087105\n",
+      "train duration 4.31696629524231 \n",
+      "r2:  0.2815369025436222\n",
       " \n",
       "Model trained\n",
       "xgbregressor\n",
       "Training started\n",
       "Model xgbregressor\n",
-      "train duration 7.150604248046875 \n",
-      "r2:  0.6079513596594885\n",
+      "train duration 3.5307908058166504 \n",
+      "r2:  0.8212923056378048\n",
       " \n",
       "Model trained\n"
      ]
@@ -220,9 +454,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4cedda2c",
+   "metadata": {},
+   "source": [
+    "El XGBoost tuvo el score mas alto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "81f3b94c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training duration66.15009379386902 s\n",
+      "{'xgbregressor__n_estimators': 50, 'xgbregressor__max_depth': 7}\n",
+      "0.8160851132190361\n"
+     ]
+    }
+   ],
+   "source": [
+    "param = {'xgbregressor__max_depth': [3,7, 10], \n",
+    "         'xgbregressor__n_estimators':[50,150,300],         \n",
+    "        }\n",
+    "\n",
+    "#seleccionar el modelo para el crossvalidation\n",
+    "modelname = 'xgbregressor'\n",
+    "\n",
+    "reg = load(f'./saved_models/{modelname}.joblib') \n",
+    "\n",
+    "\n",
+    "cf_file = './saved_models/cv.joblib'\n",
+    "\n",
+    "if not Path(cf_file).is_file():\n",
+    "    CV = RandomizedSearchCV(reg, param, n_jobs=2,n_iter =5, cv=5)\n",
+    "    start_time = time.time()\n",
+    "    CV.fit(X_train, y_train)  \n",
+    "    print(f'training duration{(time.time() - start_time)} s')\n",
+    "    dump(CV, cf_file)\n",
+    "else:\n",
+    "    CV = load(cf_file)\n",
+    "\n",
+    "print(CV.best_params_)    \n",
+    "print(CV.best_score_)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcbdf36b",
+   "id": "13d05f18",
    "metadata": {},
    "outputs": [],
    "source": []
